assets/css/main.css
:root {
    /* Colors */
    --primary-color: #414042;
    --secondary-color: #1c75bc;
    --secodary-dark: #0e629b;
    --secondary-light: #2596f4;
    --light: #fff;
    --soft-light: #d1d3d4;
    /* --darkest: #041119; */
    --darkest: #0e0e0e;
    /* --dark: #082032; */
    --dark: #1f1f1f;
    /* --soft-dark: #2C394B; */
    --soft-dark: #2B2B2B;
    --light-dark: #334756;
    --grey: #777777;
    --accent-green:rgb(20, 201, 187);
    --error: #FF4C29;
    /* Spacing */
    --20: 20px;
    --40: 40px;
    --60: 60px;
    --80: 80px;
    --100: 100px;
    /* Fonts */
    --header-font:'Inter', Helvetica, Arial, sans-serif;
    --copy-font: 'Inter', Helvetica, Arial, sans-serif;
    /* Effects */
    --light-glow: 0 0 20px 0 rgba(20,201,187,.45);
    --dark-glow: 0 0 20px 0 rgba(0,0,0,.35);
}

/* Universal */
body {
      background: var(--dark);
      color: var(--light);
      font-family: var(--copy-font);
}

h1 {
    font-family: var(--header-font);
    font-size: 3.25rem;
    font-weight: 700;
    line-height: 1.25;
    letter-spacing: -.02em;
    margin: var(--20) 0;
}

h2 {
    font-family: var(--header-font);
    font-size: 3rem;
    font-weight: 700;
    margin: var(--20) 0;
}

h3 {
    font-family: var(--copy-font);
    font-size: 2rem;
    font-weight: 700;
    margin: var(--20) 0;
    line-height: 1.25;
}

h4 {
    font-family: var(--copy-font);
    font-size: 1.25rem;
    font-weight: 700;
    text-transform: none;
}

p {
    font-family: var(--copy-font);
    margin: var(--20) 0;
    line-height: 1.5rem;
    color: var(--soft-light);
}

a {
    color: var(--secondary-light);
    text-decoration: none;
}

.primary-btn {
    background: var(--secondary-color);
    transition: .25s ease-in;
    cursor: pointer;
    margin: 0 6px;
    color: var(--light);
    font-family: var(--copy-font);
    text-transform: uppercase;
    padding: .5rem 1.5rem;
    /* box-shadow: var(--dark-glow); */
    text-shadow: 2px 2px var(--secodary-dark);

}

.primary-btn:hover {
    color: var(--light);
    background: var(--secondary-light);
    transition: .25s ease-in;
    /* box-shadow: var(--light-glow); */
    text-shadow: 0 0 var(--secodary-dark);

}

.padding-top-100 {
    padding-top:100px;
}

/* Utils */
.flex-half {
    flex: .5 0 0%;
}

.card {
    background: var(--darkest);
    border: 1px solid var(--soft-dark);
    padding: 2rem;
    border-radius: 12px;
}

.form-content {
    max-width: 550px;
}

/* Header */
#main-header {
      padding: .5rem 2rem;
      position: fixed;
      width: 100%;
      background: rgba(14, 14, 14, .7);
      z-index: 1;
      /* border-bottom: 1px solid var(--accent-green); */
}

#main-header nav ul {
      margin: 0;
      padding: 14px 0;
      justify-content: end;
}

#main-header nav ul li {
      font-family: var(--copy-font);
      text-transform: uppercase;
      text-align: center;
      align-content: center;
      max-width: var(--100);
      padding: 8px 5px;
}

#main-header nav ul li a {
    color: var(--soft-light);
    transition: .25s ease-out;
}

#main-header nav ul li a:hover {
    color: var(--secondary-color);
    transition: .25s ease-out;
}

.sign-up-header {
    background: var(--secondary-color);
    border-radius: 20px;
    transition: .25s ease-in;
    cursor: pointer;
    margin: 0 6px;
    /* box-shadow: var(--dark-glow); */
    text-shadow: 2px 2px var(--secodary-dark);
    
}

.sign-up-header:hover {
    background: var(--secondary-light);
    transition: .25s ease-in;
    /* box-shadow: var(--light-glow); */
    text-shadow: 0 0 var(--secodary-dark);

}

#main-header nav ul li.sign-up-header > a {
    color: var(--light);
}

.header-logo {
    max-width: 256px;
    width: 99%;
}

/* Mobile Menu */
.menu {
    display: none;
    position: fixed;
    height: 28px;
    width: 38px;
    right: 20px;
    top: 30px;
    z-index: 4;
}

.menu:hover {
    cursor: pointer;
}

.menu-element {
    position: absolute;
    padding: 2px 0;
    margin: 4px;
    width: 30px;
    background: var(--soft-light);
    border-radius: 20px;
}

#menu-top {
    top: 0;
}

#menu-middle {
    top: 8px
}

#menu-bottom {
    top: 16px;
}

.menu:hover {
    cursor: pointer;
}

.menu:hover .menu-element {
    background: var(--light);
    transition: .25s ease-out;
}

#mobile-menu {
    /* display: none; */
    top: 0;
    right: 0;
    background: var(--secondary-color);
    position: fixed;
    z-index: 3;
}

#mobile-menu-content {
    display: none;
    opacity: 0;
    transition: 3s;
}

#mobile-menu nav ul {
    padding: 30px;
}

.menu-animation-open {
    animation-name: menu-open;
    animation-duration: .75s;
}

@keyframes menu-open {
    0% {
        height: 0;
        width: 0%;
        border-radius: 0 0 0 100%;
    }

    50% {
        border-radius: 0 0 0 50%;
    }

    100% {
        height: 100vh;
        width: 100%;
        border-radius: 0 0 0 0%;
    }
}

.menu-animation-close {
    animation-name: menu-close;
    animation-duration: .75s;
}

@keyframes menu-close {
    
    0% {
        height: 100vh;
        width: 100%;
        border-radius: 0 0 0 0%;
    }

    50% {
        border-radius: 0 0 0 50%;
    }
    
    100% {
        height: 0;
        width: 0%;
        border-radius: 0 0 0 100%;
    }
}

.top-bar-x {
    transform: rotate(45deg);
    top: 8px !important;
    transition: 1s;
}

.bottom-bar-x {
    transform: rotate(135deg);
    top: 8px !important;
    transition: 1s;
}


#mobile-menu nav ul li {
    font-family: var(--copy-font);
    text-transform: uppercase;
    text-align: center;
    font-size: 2rem;
    padding: var(--40);
}

#mobile-menu nav ul li a {
    color: var(--light);
}

.menu-open {
        width: 100%;
        height: 100%;
        border-radius: 0;
}


/* Main Sections */
#hero {
    background-color: var(--darkest);
    background-image: url('../images/home/bg-pattern.png');
    background-attachment: fixed;
    min-height: 720px;
    padding: var(--100) 0;
    text-align: center;
    clip-path: ellipse(83% 100% at 55.85% 0%);
}

.shimmer {
    background: rgb(65,64,66);
    background: linear-gradient(90deg, rgba(65,64,66,0) 0%, rgba(255,255,255,0.1) 50%, rgba(65,64,66,0) 100%); 
    width: 450px;
    height: 100%;
    animation-name: sideways;
    animation-iteration-count: infinite;
    animation-duration: 10s;
    animation-timing-function: ease-in-out;
}

@keyframes sideways {
    0% {
        left: -450px;
    }

    100% {
        left: 100%
    }
}

.bottom-gradient {
    background: rgb(0,0,0);
    background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,.5) 100%);
    height: 150px;
    width: 100%;
    bottom: 0;
}

#hero p {
    font-size: 1.75rem;
}

#how-it-works {
        padding: var(--20) 0;
}

#how-it-works h4::before {
    content: " ";
    padding: 4px 2px;
    background-color: var(--secondary-color);
    position: absolute;
    left: -12px;
    height: 20px;
    bottom: -1px;
}

#how-it-works .container {
    max-width: 1024px;
}

#how-it-works .content {
    max-width: 400px;
    margin: 0 auto;
    padding-top: 35px;
}

#bottom-cta {
    padding: var(--100) 0;
}


#bottom-cta {
      background: var(--soft-dark);
}

#main-footer {
      background: var(--darkest);
      position: relative;
      padding: 70px 0 0 0;
}


/* Hero Section */
.hero-img {
    max-width: 500px;
    width: 100%;
}

/* How It Works */
.content-area {
      padding: var(--100) var(--20);
}

.main-content-img {
    max-width: 300px;
}

/* Bottom CTA */
#bottom-cta .container {
    text-align: center;
}


/* Careers Page */
#career-content {
    min-height: 500px;
}

#signup-page {
    min-height: 600px;
}

/* Footer */

#main-footer .footer-content {
    padding: 0 10px 50px 10px;
}

#main-footer .copyright {
    font-size: .75rem;
    color: var(--grey);
}

#main-footer h4 {
    padding-bottom: 1rem;
}

#main-footer h4::before {
    content:" ";
    padding: 2px;
    width: 20px;
    background-color:var(--secondary-color);
    margin-left: -14px;
    margin-right: 14px;
}

#main-footer ul {
    padding: 0;
    margin: 0;
}

#main-footer ul li {
    padding: .5rem 0;
    font-family: var(--copy-font);
}

#main-footer ul li a {
    color: var(--soft-light);
    transition: .25s ease-out;
}

#main-footer ul li a:hover {
    color: var(--secondary-color);
    padding-left: 2px;
    transition: .25s ease-out;
}

.social-icon {
    margin: 5px;
    border-radius: 50px;
}

.social-icon:hover {
    box-shadow: var(--light-glow);
}


/* Contact Us Page */
.contact-form, .newsletter-form {
    max-width: 460px;
}

/* Privacy Policy */
#privacy-policy #privacy-content ul {
    padding-left: 30px;
}

#privacy-policy #privacy-content ul li {
    color: var(--soft-light);
    line-height: 1.5rem;
    list-style-type: disc;
}

#terms-page ol {
    padding-left: 40px;
}

#terms-page ol li {
    color: var(--soft-light);
    line-height: 1.5rem;
    list-style-type: num;
    margin-bottom: 12px;
}

#terms-page ol li.alpha {
    list-style-type: lower-alpha;
}

#thanks {
    min-height: 500px;
}

/* Hubspot Form Styles */
.hbspt-form label {
    color: #fff !important;
}

.labelWhite {
    color: #fff !important;
}

.hbspt-form .hs-input {
    color: var(--dark);
}

.hbspt-form .input.hs-button.primary.large {
    background: var(--secondary-color);
    transition: .25s ease-in;
    cursor: pointer;
    margin: 0 6px;
    color: var(--light);
    font-family: var(--copy-font);
    text-transform: uppercase;
    padding: .5rem 1.5rem;
    /* box-shadow: var(--dark-glow); */
    text-shadow: 2px 2px var(--secodary-dark);
}

.hbspt-form .input.hs-button.primary.large:hover {
    color: var(--light);
    background: var(--secondary-light);
    transition: .25s ease-in;
    /* box-shadow: var(--light-glow); */
    text-shadow: 0 0 var(--secodary-dark);
}

.hubspot-link__container.sproket {
    display: none !important;
}

